# worlds-project-starter-template

./: .env.example  .gitignore  Dockerfile  README.md  graphql-schema.graphql  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  lint.yml
helm/: values.yaml
src/my_app/: __init__.py  main.py
src/my_app/api/: routes.py
src/my_app/core/: auth.py  config.py  logger.py
src/my_app/core/graphql/: __init__.py  client.py
